deployment ready